--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "github-repo-delete",
   "version": "1.0.0",
-  "description": "",
+  "description": "A CLI utility to bulk delete GitHub repositories",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "delete-repos": "node src/index.js"
+    "delete-repos": "node src/commands/delete-repo.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "GitHub",
+    "repository",
+    "delete",
+    "CLI"
+  ],
+  "author": "Ankita D.",
+  "license": "MIT",
   "dependencies": {
     "@octokit/rest": "^20.0.2",
     "inquirer": "^9.2.15",
